--- a/en/index.html
+++ b/en/index.html
@@ -538,31 +538,7 @@ We are interested to know how do activists who are working for social inclusion 
   </div>
 </section>
 
-<section id="venue" class="container content-section text-center">
-  <div class="row text-center">
-    <h2>
-      Venue
-    </h2>
-  </div>
-
-  <div class="container-fluid row">{% include map.html %}</div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-12 col-sm-12">
-        <div class="thumbnail">
-          <div class="caption text-center">
-            <h3>Universidad Autónoma de Encarnación</h3>
-            <p class="venue">
-              The event will be held in the urban auditorium of the Universidad Autónoma de Encarnación, in the city of Encarnación, Paraguay
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
+{% include venue.html %}
 
 
  <!---
