--- a/index.html
+++ b/index.html
@@ -1113,31 +1113,7 @@ lang: es
   </div>-->
 </section>
 
-<section id="venue" class="container content-section text-center">
-  <div class="row text-center">
-    <h2>
-      Lugar
-    </h2>
-  </div>
-
-  <div class="container-fluid row">{% include map.html %}</div>
-
-  <div class="container-fluid text-center">
-    <div class="row">
-      <div class="col-xs-12 col-md-12 col-sm-12">
-        <div class="thumbnail">
-          <div class="caption text-center">
-            <h3>Universidad Autónoma de Encarnación</h3>
-            <p class="venue">
-              El evento se realizará en el auditorio urbano de la Universidad
-              Autónoma de Encarnación, en la ciudad de Encarnación, Paraguay
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include venue.html %}
 
 <!---
 <section id="join-us" class="container content-section text-center">
@@ -1293,71 +1269,7 @@ lang: es
     </div>
   </div>
 
-  <!-- <div class="row">
-      <div class="col-sm-4 col-md-4">
-        <a href="http://kaartgroup.com/" target="_blank">
-          <img src="{{ "/images/CIDI.png" | prepend: site.baseurl }}" alt="kaart" width="200">
-        </a>
-      </div> -->
-  <!--  <div class="col-sm-4 col-md-4">
-      <a href="http://kaartgroup.com/" target="_blank">
-        <img src="{{ "/images/Blanco-05.png" | prepend: site.baseurl }}" alt="kaart" width="200">
-      </a>
-    </div>
-    <div class="col-sm-4 col-md-4">
-      <a href="http://kaartgroup.com/" target="_blank">
-        <img src="{{ "/images/Blanco-06.png" | prepend: site.baseurl }}" alt="kaart" width="200">
-      </a>
-    </div>
-  </div> -->
 </section>
-<!---
-<section id="apoyo" class="container content-section text-center">
-  <div class="row text-center">
-    <h2>
-      Con el Apoyo de
-    </h2>
- 
 
- </div>
-    <div class="col-sm-4 col-md-4">
-      <a href="https://www.argentina.gob.ar/modernizacion/" target="_blank" class="thumbnail">
-        <img src="{{ "/images/modernizacion.png" | prepend: site.baseurl }}" alt="modernizacion" width="200">
-      </a>
-    </div>
-
-    <div class="col-sm-4 col-md-4"> 
-      <a href="http://centroargentinodecartografia.org/" target="_blank" class="thumbnail">
-        <img src="{{ "/images/cac.png" | prepend: site.baseurl }}" alt="cac" width="100">
-      </a></div>
-
-      <div class="col-sm-4 col-md-4">
- <a href="http://geoinquietos.org/grupos/argentina/" target="_blank" class="thumbnail">
-        <img src="{{ "/images/geoinquietos-new.png" | prepend: site.baseurl }}" alt="geoinquietos" width="200">
-      </a>
-     </div>     
-       <div class="col-sm-offset-4 col-sm-offset-4 col-sm-4 col-md-4">
- <a href="https://geochicas.org/" target="_blank" class="thumbnail">
-        <img src="{{ "/images/geochicas.jpg" | prepend: site.baseurl }}" alt="geochicas" width="200">
-      </a>
-     </div>     
-  <br>
-</section>
-<section id="transporte" class="container content-section text-center">
- <div class="row text-center">
-    <h3>
-      Transporte Oficial
-    </h3>
- <br>
-
- </div>
-    <div class="col-sm-offset-4 col-sm-offset-4 col-sm-4 col-md-4">
-      <a href="http://ww1.aerolineas.com.ar/arg/main.asp?idSitio=AR&idPagina=161&idIdioma=es&congresoID=5960" target="_blank" class="thumbnail">
-        <img src="{{ "/images/aerolineas.png" | prepend: site.baseurl }}" alt="aerolineas" width="200">
-      </a>
-    </div>
-<br>
-</section>
--->
 
 {% include modals.html %}
