Move home section to a dedicated directory

--- a/en/index.html
+++ b/en/index.html
@@ -538,7 +538,7 @@ We are interested to know how do activists who are working for social inclusion 
   </div>
 </section>
 
-{% include venue.html %}
+{% include home/venue.html %}
 
 
  <!---
