--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@ lang: es
   </div>-->
 </section>
 
-{% include venue.html %}
+{% include home/venue.html %}
 
 <!---
 <section id="join-us" class="container content-section text-center">
