--- a/pt/index.html
+++ b/pt/index.html
@@ -652,43 +652,7 @@ Linhas de Pesquisa e Ativismo – LATAM - 2019
   </div>-->
 </section>
 
-<section id="venue" class="container content-section text-center">
-  <div class="row text-center">
-    <h2>
-      Lugar
-    </h2>
-  </div>
-
-  <div class="container-fluid row"><div id="map"></div>
-
-<script>
-
-  var map = L.map('map', {scrollWheelZoom: false}).setView([ -27.3374, -55.8602], 16);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-  }).addTo(map);
-
-  var library = L.marker([ -27.337444 , -55.860216])
-    .bindPopup('<p class="popup-content text-center"><strong>Encarnación</strong></p>')
-    .addTo(map);
-</script>
-</div>
-
-  <div class="container-fluid text-center">
-    <div class="row">
-      <div class="col-xs-12 col-md-12 col-sm-12">
-        <div class="thumbnail">
-          <div class="caption text-center">
-            <h3> Universidade Autônoma de Encarnación </h3>
-             <p class = "local">
-O evento será realizado no auditório urbano da Universidade Autônoma de Encarnación, na cidade de Encarnación, Paraguai.
-             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include home/venue.html %}
 
 <!---
 <section id="join-us" class="container content-section text-center">
