Improve intro section

--- a/en/index.html
+++ b/en/index.html
@@ -4,36 +4,7 @@ layout: default
 lang: en
 ---
 
-<header class="intro">
-  <div class="intro-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <img src="{{ "/images/SOTM_2019.png" | relative_url }}" alt="State of the Map LATAM - Encarnacion 2019" class="img-responsive main-logo">
-          <h1>¿What world do your <span>maps show?</span></h1>
-          <h4 class="margin: 0px">Encarnación - Paraguay</h4>
-          <h2>14<sup>th</sup> - 15<sup>th</sup> - 16<sup>th</sup> November</h2>
-          <div class="about-button">
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <a class="btn btn-default" href="https://www.eventbrite.com/e/osm-latam-py-2019-tickets-70204859625" target="_blank" role="button">Register</a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <a href="#about" class="btn btn-circle page-scroll">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <a target="_blank" class="btn btn-default"
-              href="" role="button">
-                Send your presentation <br> Soon
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+{% include home/intro.html %}
 
 <!-- seccion  historia-->
 
