--- a/pt/index.html
+++ b/pt/index.html
@@ -5,43 +5,7 @@ lang: pt
 ---
 
 
-  <header class="intro">
-  <div class="intro-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <img src="/images/SOTM_2019.png" alt="State of the Map LATAM - Encarnacion 2019" class="img-responsive main-logo">
-          <h1>¿Qué mundo revelan <span>seus mapas?</span></h1>
-          <h4 class="margin: 0px">Encarnación - Paraguai</h4>
-          <h2>14, 15 y 16 de Novembro</h2>
-          <div class="about-button">
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!--- link de registro -->
-              <a class="btn btn-default" href="https://www.eventbrite.com/e/osm-latam-py-2019-tickets-70204859625" target="_blank" role="button">Inscreva-se</a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!---scroll a about-->
-              <a href="#about" class="btn btn-circle page-scroll">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!---link de envia tu presentación-->
-              <a target="_blank" class="btn btn-default"
-              href="https://www.papercall.io/osmlatam" role="button">
-                Envie sua apresentação
-              </a>
-              <a target="_blank" class="btn btn-default"
-              href="https://www.papercall.io/osmlatamtalleres" role="button">
-                Envie seu wokrshops
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+{% include home/intro.html %}
 
 
 <!-- seccion  historia-->
