--- a/index.html
+++ b/index.html
@@ -4,43 +4,7 @@ layout: default
 lang: es
 ---
 
-<header class="intro">
-  <div class="intro-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <img src="{{ " /images/SotMLatam19.png" | relative_url }}" alt="State
-          of the Map LATAM - Belém 2024" class="img-responsive main-logo">
-          <h1>¿Qué mundo revelan <span>tus mapas?</span></h1>
-          <h4 class="margin: 0px">Belém, Brasil</h4>
-          <h2>7 y 8 de deciembre</h2>
-          <div class="about-button">
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!--- link de registro -->
-              <a class="btn btn-default" href="https://www.eventbrite.com/e/osm-latam-py-2024-tickets-70204859625"
-                target="_blank" role="button">Registrate</a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!---scroll a about-->
-              <a href="#about" class="btn btn-circle page-scroll">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
-            </span>
-            <span class="col-xs-12 col-sm-4 btn-item">
-              <!---link de envia tu presentación-->
-              <a target="_blank" class="btn btn-default" href="https://www.papercall.io/osmlatam" role="button">
-                Envia tu Ponencia
-              </a>
-              <a target="_blank" class="btn btn-default" href="https://www.papercall.io/osmlatamtalleres" role="button">
-                Envia tu Taller
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+{% include home/intro.html %}
 
 <!-- seccion  historia-->
 
