Add about section

--- a/en/index.html
+++ b/en/index.html
@@ -4,14 +4,12 @@ layout: default
 lang: en
 ---
 
-
 {% include home/intro.html %}
+
+{% include home/about.html %}
 
 {% include home/program.html %}
 
 {% include home/venue.html %}
 
 {% include home/sponsors.html %}
-
-
-
