--- a/pt/index.html
+++ b/pt/index.html
@@ -6,9 +6,10 @@ lang: pt
 
 {% include home/intro.html %}
 
+{% include home/about.html %}
+
 {% include home/program.html %}
 
 {% include home/venue.html %}
 
 {% include home/sponsors.html %}
-
