--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ lang: es
 
 {% include home/intro.html %}
 
+{% include home/about.html %}
+
 {% include home/program.html %}
 
 {% include home/venue.html %}
 
 {% include home/sponsors.html %}
-
