Improve head section

--- a/en/index.html
+++ b/en/index.html
@@ -10,6 +10,6 @@ lang: en
 
 {% include home/program.html %}
 
-{% include home/venue.html %}
+{% include home/access.html %}
 
 {% include home/sponsors.html %}
