--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ lang: es
 
 {% include home/program.html %}
 
-{% include home/venue.html %}
+{% include home/access.html %}
 
 {% include home/sponsors.html %}
