--- a/pt/index.html
+++ b/pt/index.html
@@ -10,6 +10,6 @@ lang: pt
 
 {% include home/program.html %}
 
-{% include home/venue.html %}
+{% include home/access.html %}
 
 {% include home/sponsors.html %}
