Update sponsors section

--- a/pt/index.html
+++ b/pt/index.html
@@ -4,12 +4,4 @@ layout: default
 lang: pt
 ---
 
-{% include home/intro.html %}
-
-{% include home/about.html %}
-
-{% include home/program.html %}
-
-{% include home/access.html %}
-
-{% include home/sponsors.html %}
+{% include home/index.html %}
