--- a/en/index.html
+++ b/en/index.html
@@ -4,12 +4,4 @@ layout: default
 lang: en
 ---
 
-{% include home/intro.html %}
-
-{% include home/about.html %}
-
-{% include home/program.html %}
-
-{% include home/access.html %}
-
-{% include home/sponsors.html %}
+{% include home/index.html %}
